[package]
name = "wdsapi"
version = "1.3.0"
authors = ["Bruce Adams <bruce.adams@acm.org>"]

[dependencies.chrono]
version = "0.2"
features = ["serde"]

[dependencies.multipart]
version = "*"
default-features = false
features = ["client", "hyper"]

[dependencies.hyper]
version = "0.9"
default-features = false

[dependencies]
hyper-rustls = "0.2"
lazy_static = "0.1"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
rustls = "=0.5.5"
