[package]
name = "wdsapi"
version = "2.2.0"
authors = ["Bruce Adams <bruce.adams@acm.org>"]

[dependencies.chrono]
version = "0"
features = ["serde"]

[dependencies.multipart]
version = "0"
default-features = false
features = ["client", "hyper"]

[dependencies.hyper]
version = "0"
default-features = false

[dependencies]
hyper-rustls = "0"
lazy_static = "0"
serde = "0"
serde_derive = "0"
serde_json = "0"
